--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,14 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
 # Fabric Properties
-	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.28
-	loader_version=0.14.21
-
+# check these on https://modmuss50.me/fabric.html
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.28
+loader_version=0.14.19
+fabric_version=0.75.1+1.19.2
+java_version=17
 # Mod Properties
-	mod_version = 0.1.0
-	maven_group = io.felipeandrade
-	archives_base_name = doublejump
+mod_version=0.1.0
+maven_group=io.felipeandrade
+archives_base_name=doublejump
 
-# Dependencies
-	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.76.0+1.19.2
