--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,13 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.28
-loader_version=0.14.19
-fabric_version=0.75.1+1.19.2
-java_version=17
+# check these on https://fabricmc.net/versions.html
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.14.22
+fabric_version=0.88.0+1.20.1
 # Mod Properties
-mod_version=0.1.3
+mod_version=0.1.4
 maven_group=io.felipeandrade
 archives_base_name=doublejump
 
